--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -102,8 +102,9 @@
 }
 
 .optionSelectBox {
+   transition: all 0.5s ease;
   border-radius: 16px;
-  border: 2px solid 2cbca5;
+  border: 2px solid #2cbca5;
   width: 48%;
   min-height: 200px;
   height: 100%;
