--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -117,8 +117,13 @@
   cursor: pointer;
 }
 .optionSelectBox:hover {
+   
  border: 5px solid;
-  border-image: linear-gradient(45deg, purple, orange) 1;}
+  border-image: linear-gradient(45deg, purple, orange) 1;
+-webkit-transition: border-image 2s ease-out;
+  -moz-transition: border-image 2s ease-out;
+  -o-transition: border-image 2s ease-out;
+  transition: border-image 2s ease-out;}
 @media only screen and (max-width: 800px) {
   .nftBoxGrid {
     justify-content: center;
